// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item component  render as expected 1`] = `
<div
  className="d-flex flex-column "
/>
`;

exports[`Item component  render as expected 2`] = `
<Item
  name="directions"
>
  <div
    className="d-flex flex-column "
  />
</Item>
`;
